# Creational-Patterns

./: Architecture.md  CMakeLists.txt  GameModel.md  README.md
Archer/: Archer.cpp  Archer.h
Factories/: ArmyFactory.h  HumanFactory.cpp  HumanFactory.h  OrcFactory.cpp  OrcFactory.h
Healer/: Healer.cpp  Healer.h
Hero/: Hero.cpp  Hero.h
HeroBuilders/: Director.cpp  Director.h  HeroBuilder.cpp  HeroBuilder.h  HumanHeroBuilder.cpp  HumanHeroBuilder.h  OrcHeroBuilder.cpp  OrcHeroBuilder.h
Horseman/: Horseman.cpp  Horseman.h
Infantry/: Infantry.cpp  Infantry.h
Position/: Position.cpp  Position.h
Warrior/: Warrior.cpp  Warrior.h
testing/: test.cpp
